# laia-tutorial

./: .dockerignore  .gitignore  app.py  docker-compose.yml  mlflow-entrypoint.sh  pyproject.toml  pytest.ini  train.py
.github/workflows/: ci-cd.yml  continuos_delivery.yml  continuos_deployment.yml  continuos_staging.yml  continuous_integration.yml
mlflow-server/: Dockerfile.mlflow
serving/: Dockerfile.flask  app.py
tests/: test_api.py  test_e2e.py  train_ci.py
training/: Dockerfile  train.py  train_ci.py  train_model.py
